<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white"
        android:layout_margin="8dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_this_form_to_proceed"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        />

            <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_enrollment"
                android:id="@+id/enrollment_no"
                android:maxLength="11"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_adhaar"
                    android:maxLength="12"
                    android:inputType="number"
                    android:id="@+id/adhaar_no"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/form_container"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:id="@+id/your_name"
                    />

                </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/categories"
                android:id="@+id/student_category"
                android:layout_margin="@dimen/default_margin"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/blood_group"
                android:id="@+id/student_blood_group"
                android:layout_margin="@dimen/default_margin"
                />

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_father_name"
                    android:id="@+id/student_father"
                    />

                </com.google.android.material.textfield.TextInputLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="wrap_content"
                    android:entries="@array/stream"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:id="@+id/class_"
                    android:layout_height="wrap_content">

                </Spinner>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:id="@+id/year"
                    android:entries="@array/year">

                </Spinner>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:id="@+id/branch"
                    android:entries="@array/branch">

                </Spinner>

            </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"

                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_room_number"
                    android:id="@+id/room_no"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:id="@+id/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/whatsapp_no_if_any"
                    android:id="@+id/whatsapp_no"
                    android:inputType="number"
                    android:maxLength="10"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email_address"
                    />

                    <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/father_contact"
                        android:inputType="number"
                        android:maxLength="10"
                        android:id="@+id/father_contact"

                        />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/guardian_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:id="@+id/local_guardian_no"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_margin"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/permanent_address"
                    android:id="@+id/permanent_address"
                    />

                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/warning_student_form"
                android:textColor="@color/warning_red"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:id="@+id/submit"
                android:background="@drawable/success_green_button"
                android:textColor="@color/white"
                android:text="@string/submit"
                />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>