<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registration.Second">

    <ScrollView
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/extra_large_heading"
                android:text="Fill your detail"
                android:textColor="@color/PrimaryText"
                android:layout_marginLeft="@dimen/default_margin"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Complete this form to proceed"
                android:textColor="@color/PrimaryText"
                android:layout_marginLeft="@dimen/default_margin"
                />

                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="@string/mobile_no"
                    android:maxLength="10"
                    android:inputType="number"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:padding="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:entries="@array/categories"
                    android:id="@+id/student_category"
                    android:background="@drawable/rounded_white"
                    android:padding="4dp"
                    />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:entries="@array/blood_group"
                    android:id="@+id/student_blood_group"
                    android:padding="4dp"
                    android:background="@drawable/rounded_white"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:hint="@string/enter_your_father_name"
                    android:id="@+id/student_father"
                    android:padding="4dp"
                    android:maxLines="1"
                    android:maxEms="1"
                    android:inputType="textPersonName"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:minHeight="30dp"
                    android:paddingLeft="12dp"
                    android:drawableLeft="@drawable/ic_id_icon"

                    />


                <EditText
                    android:id="@+id/father_contact"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="@string/father_contact"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:padding="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/rounded_white"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:layout_width="wrap_content"
                        android:entries="@array/stream"
                        android:layout_marginEnd="4dp"
                        android:id="@+id/class_"
                        android:layout_height="@dimen/reg_et_height">

                    </Spinner>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:id="@+id/year"
                        android:entries="@array/year">

                    </Spinner>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:id="@+id/branch"
                        android:entries="@array/branch">

                    </Spinner>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:hint="@string/enter_your_room_number"
                    android:id="@+id/room_no"
                    android:padding="4dp"
                    android:maxLines="1"
                    android:maxEms="1"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:minHeight="30dp"
                    android:paddingLeft="12dp"
                    android:drawableLeft="@drawable/ic_home"

                    />


                <EditText
                    android:hint="@string/guardian_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:id="@+id/local_guardian_no"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_phone"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:padding="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <EditText
                    android:id="@+id/whatsapp_no"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="@string/whatsapp_no_if_any"
                    android:inputType="number"
                    android:maxEms="1"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:padding="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <EditText
                    android:hint="@string/permanent_address"
                    android:id="@+id/permanent_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_et_height"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_location"
                    android:inputType="text"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:minHeight="30dp"
                    android:padding="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:textAlignment="center"
                    android:text="@string/warning_student_form"
                    android:textColor="@color/warning_red"
                    />


        </LinearLayout>
    </ScrollView>
</FrameLayout>